engine/src/R3E/j3x/tests/good/9.j3x
list list_a = [[]; []; []; ["good"; "better"]]