engine/src/R3E/j3x/tests/bad/wrong_type_10.j3x
list[list[string]] list = [["okay"]; []; []; []; []; [5]; []]